--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ android.useAndroidX=true
 # We no longer need to auto-convert third-party libraries to use AndroidX, which slowed down the build
 android.enableJetifier=false
 
+org.gradle.java.home=C:/Java17/jdk-17.0.15.6-hotspot
 # Allow Gradle to use up to 1 GB of RAM
 org.gradle.jvmargs=-Xmx1024M
 
